Bug 295449 - Maximizing with BorderlessMaximizedWindows=true and restoring results in a smaller window.
Summary: Maximizing with BorderlessMaximizedWindows=true and restoring results in a sm...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 4.8.1
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-07 04:07 UTC by Alejandro Nova
Modified: 2012-03-14 00:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alejandro Nova 2012-03-07 04:07:08 UTC
User-Agent:       Mozilla/5.0 (X11; Linux i686) AppleWebKit/534.34 (KHTML, like Gecko) konqueror/4.8.1 Safari/534.34
Build Identifier: 

I have a setup where I enabled three "KWin buttons" Plasmoids to emulate the main buttons behavior when I have a maximized window. To complement it, I set the option "BorderlessMaximizedWindows=true" in kwinrc.

When I restore the window to its normal size (using the Restore button I have available as a plasmoid), the resulting window is smaller. If I repeat, I'll see the window shrink and shrink over time.

Reproducible: Always

Steps to Reproduce:
1. Set "BorderlessMaximizedWindows=true" in kwinrc, and build a setup that allows you to properly control the maximized window through Plasma.
2. Press the "Restore" button.
3. Maximize again, and repeat.
Actual Results:  
You'll see how your window becomes smaller and smaller.

Expected Results:  
The window gets restored to its proper size.

KDE 4.8.1.
Comment 1 Thomas Lübking 2012-03-07 11:14:24 UTC
DO you happen to know whether this has occurred in 4.8.0 as well?
Comment 2 Thomas Lübking 2012-03-07 13:44:51 UTC
no, has happened before.
have patch. geometry must be store BEFORE removing the decoration in ::changeMaximize
Comment 3 Thomas Lübking 2012-03-14 00:20:31 UTC
Git commit 677915da069b4d563b40250c4b69943af53a70bd by Thomas Lübking.
Committed on 07/03/2012 at 14:46.
Pushed by luebking into branch 'KDE/4.8'.

store restore size /before/ removing the decoration for BorderlessMaximized (lead to window resizes on unmaximization)
REVIEW: 104185

M  +10   -8    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/677915da069b4d563b40250c4b69943af53a70bd