store restore size /before/ removing the decoration for BorderlessMaximized (lead to window resizes on unmaximization)

BUG: 295449
REVIEW: 104185